question: how to invoke dirty check